examples/cilium-header-based/rollout.yaml
---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: rollouts-demo
  namespace: default
spec:
  replicas: 5
  strategy:
    canary:
      canaryService: argo-rollouts-canary-service
      stableService: argo-rollouts-stable-service
      trafficRouting:
        plugins:
          argoproj-labs/gatewayAPI:
            httpRoutes:
              - name: argo-rollouts-http-route
                useHeaderRoutes: true
            namespace: default
        managedRoutes:
          - name: argo-rollouts
      steps:
        - pause: {}
        - setCanaryScale:
            replicas: 1
        - setHeaderRoute:
            name: argo-rollouts
            match:
              - headerName: X-Test
                headerValue:
                  exact: test
        - pause: {}
        - setHeaderRoute: # remove header route
            name: argo-rollouts
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: rollouts-demo
  template:
    metadata:
      labels:
        app: rollouts-demo
    spec:
      containers:
        - name: http-echo
          image: hashicorp/http-echo:1.0
          args:
          - "-text=Hello from $(POD_NAME)"
          ports:
            - name: http
              containerPort: 5678
              protocol: TCP
          resources:
            requests:
              memory: 32Mi
              cpu: 5m
