examples/cilium-header-based/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: argo-rollouts-service
  namespace: default
spec:
  ports:
    - port: 80
      targetPort: http
  selector:
    app: dummy # dummy selector needed for Cilium, see https://github.com/cilium/cilium/issues/38415
---
apiVersion: v1
kind: Service
metadata:
  name: argo-rollouts-canary-service
  namespace: default
spec:
  ports:
    - port: 80
      targetPort: http
  selector:
    app: rollouts-demo
---
apiVersion: v1
kind: Service
metadata:
  name: argo-rollouts-stable-service
  namespace: default
spec:
  ports:
    - port: 80
      targetPort: http
  selector:
    app: rollouts-demo
